bad/sub_invalid_types_void_class.example_compiler_output
ERROR
[1mbad/sub_invalid_types_void_class.lat:8:8: [1;31merror: [0;1msubtraction is defined only for int values, not `void` and `X`[m
	foo() - x;
	      [1;32m^[m
